// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch renders 1`] = `
.c0 {
  background-color: #E0E0E0;
  border-radius: 24px;
  color: white;
  height: 33px;
  min-width: 60px;
  opacity: 1;
  position: relative;
  -webkit-transition: background-color 300ms cubic-bezier(0.215,0.61,0.355,1);
  transition: background-color 300ms cubic-bezier(0.215,0.61,0.355,1);
  width: 60px;
  opacity: 40%;
}

.c0:hover {
  background-color: #cccccc;
}

.c2 {
  background-color: white;
  border-radius: 24px;
  cursor: pointer;
  height: 25px;
  left: 4px;
  position: absolute;
  top: 4px;
  -webkit-transition: all 200ms cubic-bezier(0.215,0.61,0.355,1);
  transition: all 200ms cubic-bezier(0.215,0.61,0.355,1);
  width: 25px;
}

.c1 {
  cursor: pointer;
  height: 100%;
  opacity: 0;
  width: 100%;
}

<label
  checked={false}
  className="c0"
>
  <input
    aria-checked={false}
    checked={false}
    className="c1"
    onChange={[MockFunction]}
    type="checkbox"
    value={false}
  />
  <div
    checked={false}
    className="c2"
  />
</label>
`;

exports[`switch renders with disabled styles 1`] = `
.c0 {
  background-color: #E0E0E0;
  border-radius: 24px;
  color: white;
  height: 33px;
  min-width: 60px;
  opacity: .5;
  position: relative;
  -webkit-transition: background-color 300ms cubic-bezier(0.215,0.61,0.355,1);
  transition: background-color 300ms cubic-bezier(0.215,0.61,0.355,1);
  width: 60px;
}

.c0:hover {
  background-color: #cccccc;
}

.c2 {
  background-color: white;
  border-radius: 24px;
  cursor: not-allowed;
  height: 25px;
  left: calc(100% - 25px - 4px);
  position: absolute;
  top: 4px;
  -webkit-transition: all 200ms cubic-bezier(0.215,0.61,0.355,1);
  transition: all 200ms cubic-bezier(0.215,0.61,0.355,1);
  width: 25px;
}

.c1 {
  cursor: pointer;
  height: 100%;
  opacity: 0;
  width: 100%;
}

<label
  checked={true}
  className="c0"
  disabled={true}
>
  <input
    aria-checked={true}
    checked={true}
    className="c1"
    onChange={[MockFunction]}
    type="checkbox"
    value={true}
  />
  <div
    checked={true}
    className="c2"
    disabled={true}
  />
</label>
`;
